# heimdall

./: .gitignore  README.md  pyproject.toml
docs/: REQUIREMENTS.md  enrollment.md  memory-extensions.md  payload-schema.md  pipeline-worker.md  plan.md  room-node.md  supply-chain.md  troubleshooting.md
enrollment/: .env.example  __init__.py  enroll.py  requirements.in  requirements.txt
memory_extensions/: voice_routes.py
muninn/: .env.example  pyproject.toml
muninn/muninn/: __init__.py  __main__.py  config.py
muninn/muninn/api/: app.py
muninn/muninn/api/routes/: followups.py  maintenance.py  memories.py  search.py
muninn/muninn/db/: connection.py
muninn/muninn/db/migrations/: 001_initial.sql  002_vec_table.sql  003_embed_models.sql  004_embedding_unique.sql
muninn/muninn/importers/: base.py  ha_calendar.py  obsidian.py
muninn/muninn/maintenance/: expire.py  reembed.py  vacuum.py
muninn/muninn/mcp/: tools.py
muninn/muninn/store/: embeddings.py  followups.py  memories.py  patterns.py
muninn/tests/: conftest.py  test_api.py  test_followups.py  test_search.py  test_store.py
muninn/tests/fixtures/: seed_memories.json
nornir/: pyproject.toml
pipeline_worker/: .env.example  __init__.py  diarize.py  main.py  memory_client.py  models.py  requirements.in  requirements.txt  server.py  (+3 more)
verdandi/: .env.example  pyproject.toml
verdandi/tests/: test_embedder.py  test_recommender.py
verdandi/tests/fixtures/: sample_events.json
verdandi/verdandi/: __main__.py  config.py  embedder.py  memory_client.py  recommender.py
verdandi/verdandi/api/: app.py
(+28 files in other folders)
