[project]
name = "muninn"
version = "0.1.0"
description = "Memory server — persistent SQLite + vector search store for Heimdall"
requires-python = ">=3.11"
dependencies = [
    "nornir",
    "aiosqlite>=0.20",
    "sqlite-vec>=0.1.6",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "mcp>=1.0",
]

[tool.uv.sources]
nornir = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
