[project]
name = "verdandi"
version = "0.1.0"
description = "Recommender engine — scores and surfaces relevant memories for each ContextEvent"
requires-python = ">=3.11"
dependencies = [
    "nornir",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
nornir = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
